The app can now download images from dropbox

--- a/JuniorDeveloperCodingChallengeObjC/Info.plist
+++ b/JuniorDeveloperCodingChallengeObjC/Info.plist
@@ -25,7 +25,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>db-23oge5c0g2ye988</string>
+				<string>db-u7vmxha8rgyp9q5</string>
 			</array>
 		</dict>
 	</array>
